logs/eegtools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/EEGtools-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/eegtools'...
Listing './lib/python3.5/site-packages/eegtools/data'...
Compiling './lib/python3.5/site-packages/eegtools/data/shared.py'...
***   File "./lib/python3.5/site-packages/eegtools/data/shared.py", line 140
    print '%s @ %.2fs (%.2fs long) -> %d.' % (
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eegtools/data/shared_test.py'...
***   File "./lib/python3.5/site-packages/eegtools/data/shared_test.py", line 59
    print readme_fname
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eegtools/featex_test.py'...
***   File "./lib/python3.5/site-packages/eegtools/featex_test.py", line 11
    print W, ii
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eegtools/io'...
Compiling './lib/python3.5/site-packages/eegtools/spatfilt_test.py'...
***   File "./lib/python3.5/site-packages/eegtools/spatfilt_test.py", line 22
    print W.shape
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
